--- a/styles.css
+++ b/styles.css
@@ -3,31 +3,51 @@
     padding: 0;
 }
 
+.fa-bars {
+    color: #B4B4B4;
+}
 
-header{
+header img{
+    width: 100px;
+}
+
+header {
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 60px;
 }
 
+
 .search {
-    height: 35px;
+    /* display: flex; */
     border: 1px solid grey;
     width: 50%;
 }
 
-.search input[type=text] {
+.search input {
     border: none;
     width: 90%;
+    height: 35px;
 }
 
-.search button{
+.search button {
     width: 10%;
     border: none;
+    height: 35px;
 }
 
-button{
+.fa-upload {
+   color: #808080;
+   font-size: ;
+}
+
+.sign-in {
     height: 35px;
+    width: 4%;
     padding: 0 5px;
+    background-color:#167AC6;
+    border: none;
+    color: white;
+    border-radius: 4px;
 }
